Enrich comments in loaders

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -9,13 +9,17 @@ CC= gcc
 ENTRYPOINT_CFLAGS= -ffreestanding -c -g -fno-pie -m32
 CFLAGS= -c -g -fno-pie -m32
 LD= ld
-KERNEL_LDFLAGS= -m elf_i386 -s -Ttext 0x7E00 -e main -N --oformat binary
-KERNEL_ROMSIZE=64512
+LOADER_SIZE:=$(shell stat -L -c %s ../loader/loader2.bin)
+BASE_ADDRESS=0x8000
+KERNEL_LDFLAGS= -m elf_i386 -s -Ttext $(BASE_ADDRESS) -e main -N --oformat binary
+#KERNEL_ROMSIZE=65536
+KERNEL_BIN_RAW=$(KERNEL_BIN).raw
 
 all: main.o video.o ports.o
-	$(LD) -o $(KERNEL_BIN) $(KERNEL_LDFLAGS) main.o video.o ports.o
-	cp ../$(UTILS_DIR)/$(ZEROEXTEND) .
-	./$(ZEROEXTEND) $(KERNEL_BIN) $(KERNEL_ROMSIZE)
+	$(LD) -o $(KERNEL_BIN_RAW) $(KERNEL_LDFLAGS) main.o video.o ports.o
+#	cp ../$(UTILS_DIR)/$(ZEROEXTEND) .
+#	dd if=/dev/zero bs=$(KERNEL_ROMSIZE) count=1 | cat $(KERNEL_BIN_RAW) - | dd bs=$(KERNEL_ROMSIZE) count=1 of=$(KERNEL_BIN)
+#	./$(ZEROEXTEND) $(KERNEL_BIN) $(KERNEL_ROMSIZE)
 	
 video.o: video.c
 	$(CC) $(CFLAGS) -o $@ $<
@@ -27,4 +31,9 @@ main.o: main.c
 	$(CC) $(ENTRYPOINT_CFLAGS) -o $@ $<
 
 clean:
-	rm -rf *.bin *.o 
+	rm -rf *.bin *.raw *.o 
+
+%.s: %.c
+	$(CC) -S $(CFLAGS) -o $@ $<
+
+assembly: main.s video.s ports.s
